--- a/analiseficha.html
+++ b/analiseficha.html
@@ -676,6 +676,9 @@ c.innerHTML = `
 
   </div>
 `;
+cards.appendChild(c);
+  } // fecha for
+}   // fecha renderLista
 
 /* =====================================================
    MODAL
