--- a/index-receita.html
+++ b/index-receita.html
@@ -11,16 +11,18 @@
 <style>
 :root{
   --primary:#2563eb;
+  --success:#16a34a;
+  --danger:#dc2626;
   --bg:#f8fafc;
   --card:#ffffff;
   --text:#0f172a;
   --muted:#64748b;
   --border:#e5e7eb;
-  --radius:18px;
   --shadow:0 14px 34px rgba(0,0,0,.12);
 }
 
 *{box-sizing:border-box}
+
 body{
   margin:0;
   font-family:Inter,sans-serif;
@@ -28,7 +30,7 @@ body{
   color:var(--text);
 }
 
-/* ================= HEADER / FILTROS ================= */
+/* ================= FILTROS ================= */
 .filters{
   position:sticky;
   top:0;
@@ -47,7 +49,7 @@ body{
   border:1px solid var(--border);
   padding:0 16px;
   font-size:14px;
-  font-weight:600;
+  font-weight:700;
 }
 
 /* ================= GRID ================= */
@@ -67,6 +69,7 @@ body{
   cursor:pointer;
   transition:.15s ease;
 }
+
 .card:hover{transform:translateY(-4px)}
 
 .card img{
@@ -87,7 +90,6 @@ body{
 
 .badges{
   display:flex;
-  flex-wrap:wrap;
   gap:6px;
   margin-top:8px;
 }
@@ -101,15 +103,8 @@ body{
   color:#3730a3;
 }
 
-.badge.ok{
-  background:#dcfce7;
-  color:#166534;
-}
-
-.badge.warn{
-  background:#fee2e2;
-  color:#991b1b;
-}
+.badge.ok{background:#dcfce7;color:#166534}
+.badge.warn{background:#fee2e2;color:#991b1b}
 
 /* ================= MODAL ================= */
 .modal{
@@ -124,7 +119,7 @@ body{
 .modal-box{
   background:#fff;
   width:100%;
-  max-height:92vh;
+  max-height:94vh;
   border-radius:22px 22px 0 0;
   overflow:auto;
 }
@@ -144,15 +139,45 @@ body{
   font-size:22px;
 }
 
-.modal-body p{
+.modal-body h3{
+  margin:18px 0 6px;
+}
+
+.modal-body textarea{
+  width:100%;
+  min-height:160px;
+  border-radius:14px;
+  border:1px solid var(--border);
+  padding:14px;
   font-size:14px;
-  color:var(--muted);
-  white-space:pre-line;
+  font-weight:700;
+  resize:vertical;
+  text-transform:uppercase;
+}
+
+.modal-body textarea::placeholder{
+  text-transform:uppercase;
+}
+
+.btn{
+  width:100%;
+  height:46px;
+  border:none;
+  border-radius:14px;
+  font-weight:900;
+  letter-spacing:.04em;
+  margin-top:12px;
+  cursor:pointer;
+}
+
+.btn-save{
+  background:linear-gradient(135deg,var(--primary),#1e40af);
+  color:#fff;
 }
 
 .ing{
   border-bottom:1px dashed var(--border);
-  padding:10px 0;
+  padding:8px 0;
   font-size:14px;
 }
 
@@ -172,22 +197,20 @@ body{
 
 <!-- ================= FILTROS ================= -->
 <div class="filters">
-  <input id="filtroNome" placeholder="🔍 Buscar prato">
-
+  <input id="filtroNome" placeholder="🔍 BUSCAR PRATO">
   <select id="filtroTipo">
-    <option value="">🍽 Todos os tipos</option>
-    <option value="SUSHI">SUSHI</option>
-    <option value="DRINK">DRINK</option>
-    <option value="ENTRADA">ENTRADA</option>
-    <option value="PRATO PRINCIPAL">PRATO PRINCIPAL</option>
-    <option value="SOBREMESA">SOBREMESA</option>
-    <option value="ACOMPANHAMENTO">ACOMPANHAMENTO</option>
+    <option value="">🍽 TODOS OS TIPOS</option>
+    <option>SUSHI</option>
+    <option>DRINK</option>
+    <option>ENTRADA</option>
+    <option>PRATO PRINCIPAL</option>
+    <option>SOBREMESA</option>
+    <option>ACOMPANHAMENTO</option>
   </select>
-
   <select id="filtroReceita">
-    <option value="">📋 Todas as receitas</option>
-    <option value="COM">Com receita</option>
-    <option value="SEM">Sem receita</option>
+    <option value="">📋 TODAS</option>
+    <option value="COM">COM RECEITA</option>
+    <option value="SEM">SEM RECEITA</option>
   </select>
 </div>
 
@@ -209,6 +232,7 @@ const sb = supabase.createClient(
 );
 
 let pratos = [];
+let pratoAtual = null;
 
 async function carregar(){
   const { data } = await sb.from("buffet").select("*").order("nome");
@@ -216,7 +240,7 @@ async function carregar(){
   render();
 }
 
-async function render(){
+function render(){
   cards.innerHTML = "";
 
   const nome = filtroNome.value.toUpperCase();
@@ -226,30 +250,30 @@ async function render(){
   for(const p of pratos){
     if(nome && !p.nome.toUpperCase().includes(nome)) continue;
     if(tipo && p.tipo !== tipo) continue;
-    if(receita === "COM" && !p.modo_preparo) continue;
-    if(receita === "SEM" && p.modo_preparo) continue;
+    if(receita==="COM" && !p.modo_preparo) continue;
+    if(receita==="SEM" && p.modo_preparo) continue;
 
     const c = document.createElement("div");
-    c.className = "card";
-    c.onclick = ()=>abrir(p);
+    c.className="card";
+    c.onclick=()=>abrir(p);
 
-    c.innerHTML = `
+    c.innerHTML=`
       ${p.foto_url ? `<img src="${p.foto_url}">` : ``}
       <div class="card-body">
         <h3>${p.nome}</h3>
         <div class="badges">
-          <span class="badge">${p.tipo || "-"}</span>
+          <span class="badge">${p.tipo||"-"}</span>
           ${p.modo_preparo
             ? `<span class="badge ok">COM RECEITA</span>`
             : `<span class="badge warn">SEM RECEITA</span>`}
         </div>
-      </div>
-    `;
+      </div>`;
     cards.appendChild(c);
   }
 }
 
 async function abrir(p){
+  pratoAtual = p;
   modal.style.display="flex";
   mFoto.src = p.foto_url || "";
 
@@ -258,17 +282,34 @@ async function abrir(p){
     .select("*")
     .eq("buffet_id", p.id);
 
-  mBody.innerHTML = `
+  mBody.innerHTML=`
     <h2>${p.nome}</h2>
-    <p><b>Modo de preparo:</b><br>${p.modo_preparo || "❌ Receita não cadastrada"}</p>
 
-    <h3>Ingredientes</h3>
+    <h3>MODO DE PREPARO</h3>
+    <textarea id="receitaInput"
+      placeholder="DESCREVA A RECEITA COMPLETA AQUI...">${p.modo_preparo||""}</textarea>
+
+    <button class="btn btn-save" onclick="salvarReceita()">
+      SALVAR RECEITA
+    </button>
+
+    <h3>INGREDIENTES</h3>
     ${itens.map(i=>`
       <div class="ing">
         ${i.nome} — ${i.quantidade} ${i.unidade_uso}
       </div>
     `).join("")}
   `;
+}
+
+async function salvarReceita(){
+  const texto = receitaInput.value.trim().toUpperCase();
+  await sb.from("buffet")
+    .update({ modo_preparo: texto })
+    .eq("id", pratoAtual.id);
+
+  await carregar();
+  fechar();
 }
 
 function fechar(){
