--- a/index-receita.html
+++ b/index-receita.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Modo de Preparo • Receitas</title>
+<title>Registro de Modo de Preparo</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
@@ -28,16 +28,33 @@ body{
   color:var(--text);
 }
 
-/* ================= FILTROS ================= */
-.filters{
+/* ===== HEADER ===== */
+.header{
   position:sticky;
   top:0;
   z-index:10;
   background:#fff;
   padding:14px;
+  box-shadow:0 4px 14px rgba(0,0,0,.08);
   display:grid;
   gap:10px;
-  box-shadow:0 4px 14px rgba(0,0,0,.08);
+}
+
+.header button{
+  height:48px;
+  border:none;
+  border-radius:999px;
+  background:linear-gradient(135deg,var(--primary),#1e40af);
+  color:#fff;
+  font-weight:900;
+  letter-spacing:.05em;
+  cursor:pointer;
+}
+
+/* ===== FILTROS ===== */
+.filters{
+  display:grid;
+  gap:10px;
 }
 
 .filters input,
@@ -51,7 +68,7 @@ body{
   text-transform:uppercase;
 }
 
-/* ================= GRID ================= */
+/* ===== GRID ===== */
 .grid{
   padding:16px;
   display:grid;
@@ -59,21 +76,12 @@ body{
   gap:16px;
 }
 
-/* ================= CARD ================= */
+/* ===== CARD ===== */
 .card{
   background:var(--card);
   border-radius:22px;
   box-shadow:var(--shadow);
   overflow:hidden;
-  cursor:pointer;
-  transition:.15s ease;
-}
-.card:hover{transform:translateY(-4px)}
-
-.card img{
-  width:100%;
-  height:150px;
-  object-fit:cover;
 }
 
 .card-body{
@@ -86,30 +94,19 @@ body{
   font-weight:900;
 }
 
-.badges{
-  display:flex;
-  gap:6px;
-  margin-top:8px;
-}
-
 .badge{
+  margin-top:8px;
+  display:inline-block;
   padding:6px 10px;
   border-radius:999px;
   font-size:11px;
   font-weight:900;
 }
 
-.badge.ok{
-  background:#dcfce7;
-  color:#166534;
-}
+.ok{background:#dcfce7;color:#166534}
+.warn{background:#fee2e2;color:#991b1b}
 
-.badge.warn{
-  background:#fee2e2;
-  color:#991b1b;
-}
-
-/* ================= MODAL ================= */
+/* ===== MODAL ===== */
 .modal{
   position:fixed;
   inset:0;
@@ -122,56 +119,50 @@ body{
 .modal-box{
   background:#fff;
   width:100%;
-  max-height:94vh;
+  max-height:95vh;
   border-radius:22px 22px 0 0;
-  overflow:auto;
-}
-
-.modal img{
-  width:100%;
-  height:200px;
-  object-fit:cover;
-}
-
-.modal-body{
   padding:18px;
 }
 
-.modal-body h2{
+.modal-box h2{
   margin:0 0 12px;
-  font-size:22px;
+  font-size:20px;
   font-weight:900;
 }
 
-.modal-body textarea{
+.modal-box select,
+.modal-box textarea{
   width:100%;
-  min-height:200px;
+  margin-top:10px;
   border-radius:14px;
   border:1px solid var(--border);
   padding:14px;
   font-size:14px;
   font-weight:900;
   text-transform:uppercase;
+}
+
+.modal-box textarea{
+  min-height:200px;
   resize:vertical;
 }
 
-.btn{
+.modal-box button{
   width:100%;
   height:48px;
-  margin-top:12px;
+  margin-top:14px;
   border:none;
   border-radius:14px;
-  font-weight:900;
-  letter-spacing:.05em;
-  cursor:pointer;
   background:linear-gradient(135deg,var(--primary),#1e40af);
   color:#fff;
+  font-weight:900;
+  cursor:pointer;
 }
 
 .close{
   position:absolute;
-  top:10px;
-  right:14px;
+  top:12px;
+  right:18px;
   font-size:22px;
   color:#fff;
   font-weight:900;
@@ -182,35 +173,48 @@ body{
 
 <body>
 
-<!-- ================= FILTROS ================= -->
-<div class="filters">
-  <input id="filtroNome" placeholder="🔍 BUSCAR PRATO">
+<!-- ===== HEADER ===== -->
+<div class="header">
+  <button onclick="abrirCadastro()">➕ REGISTRAR MODO DE PREPARO</button>
 
-  <select id="filtroTipo">
-    <option value="">🍽 TODOS OS TIPOS</option>
-    <option>SUSHI</option>
-    <option>DRINK</option>
-    <option>ENTRADA</option>
-    <option>PRATO PRINCIPAL</option>
-    <option>SOBREMESA</option>
-    <option>ACOMPANHAMENTO</option>
-  </select>
+  <div class="filters">
+    <input id="filtroNome" placeholder="🔍 BUSCAR PRATO">
 
-  <select id="filtroReceita">
-    <option value="">📋 TODAS</option>
-    <option value="COM">COM RECEITA</option>
-    <option value="SEM">SEM RECEITA</option>
-  </select>
+    <select id="filtroTipo">
+      <option value="">🍽 TODOS OS TIPOS</option>
+      <option>SUSHI</option>
+      <option>DRINK</option>
+      <option>ENTRADA</option>
+      <option>PRATO PRINCIPAL</option>
+      <option>SOBREMESA</option>
+      <option>ACOMPANHAMENTO</option>
+    </select>
+
+    <select id="filtroReceita">
+      <option value="">📋 TODAS</option>
+      <option value="COM">COM RECEITA</option>
+      <option value="SEM">SEM RECEITA</option>
+    </select>
+  </div>
 </div>
 
 <div id="cards" class="grid"></div>
 
-<!-- ================= MODAL ================= -->
+<!-- ===== MODAL CADASTRO ===== -->
 <div id="modal" class="modal" onclick="fechar()">
   <div class="modal-box" onclick="event.stopPropagation()">
     <span class="close" onclick="fechar()">✕</span>
-    <img id="mFoto">
-    <div id="mBody" class="modal-body"></div>
+
+    <h2>REGISTRAR MODO DE PREPARO</h2>
+
+    <select id="pratoSelect">
+      <option value="">SELECIONE O PRATO</option>
+    </select>
+
+    <textarea id="modoInput"
+      placeholder="DIGITE O MODO DE PREPARO COMPLETO..."></textarea>
+
+    <button onclick="salvar()">SALVAR MODO DE PREPARO</button>
   </div>
 </div>
 
@@ -220,87 +224,73 @@ const sb = supabase.createClient(
   "sb_publishable_NNFvdfSXgOdGGVcSbphbjQ_brC3_9ed"
 );
 
-let pratos = [];
-let pratoAtual = null;
+let pratos=[];
 
 async function carregar(){
-  const { data } = await sb
-    .from("buffet")
-    .select("*")
-    .order("nome");
-
-  pratos = data || [];
+  const { data } = await sb.from("buffet").select("*").order("nome");
+  pratos=data||[];
+  preencherSelect();
   render();
+}
+
+function preencherSelect(){
+  pratoSelect.innerHTML='<option value="">SELECIONE O PRATO</option>';
+  pratos.forEach(p=>{
+    pratoSelect.innerHTML+=`
+      <option value="${p.id}">${p.nome}</option>`;
+  });
 }
 
 function render(){
   cards.innerHTML="";
+  const nome=filtroNome.value.toUpperCase();
+  const tipo=filtroTipo.value;
+  const rec=filtroReceita.value;
 
-  const nome = filtroNome.value.toUpperCase();
-  const tipo = filtroTipo.value;
-  const rec = filtroReceita.value;
+  pratos.forEach(p=>{
+    if(nome && !p.nome.toUpperCase().includes(nome)) return;
+    if(tipo && p.tipo!==tipo) return;
+    if(rec==="COM" && !p.modo_preparo) return;
+    if(rec==="SEM" && p.modo_preparo) return;
 
-  for(const p of pratos){
-    if(nome && !p.nome.toUpperCase().includes(nome)) continue;
-    if(tipo && p.tipo !== tipo) continue;
-    if(rec==="COM" && !p.modo_preparo) continue;
-    if(rec==="SEM" && p.modo_preparo) continue;
-
-    const c = document.createElement("div");
-    c.className="card";
-    c.onclick=()=>abrir(p);
-
-    c.innerHTML=`
-      ${p.foto_url ? `<img src="${p.foto_url}">` : ``}
-      <div class="card-body">
-        <h3>${p.nome}</h3>
-        <div class="badges">
-          ${p.modo_preparo
-            ? `<span class="badge ok">COM RECEITA</span>`
-            : `<span class="badge warn">SEM RECEITA</span>`}
+    cards.innerHTML+=`
+      <div class="card">
+        <div class="card-body">
+          <h3>${p.nome}</h3>
+          <span class="badge ${p.modo_preparo?'ok':'warn'}">
+            ${p.modo_preparo?'COM RECEITA':'SEM RECEITA'}
+          </span>
         </div>
-      </div>
-    `;
-    cards.appendChild(c);
-  }
+      </div>`;
+  });
 }
 
-function abrir(p){
-  pratoAtual = p;
+function abrirCadastro(){
   modal.style.display="flex";
-  mFoto.src = p.foto_url || "";
-
-  mBody.innerHTML=`
-    <h2>${p.nome}</h2>
-
-    <textarea id="modoInput"
-      placeholder="DIGITE AQUI O MODO DE PREPARO COMPLETO...">${p.modo_preparo||""}</textarea>
-
-    <button class="btn" onclick="salvar()">
-      SALVAR MODO DE PREPARO
-    </button>
-  `;
 }
 
 async function salvar(){
-  const texto = modoInput.value.trim().toUpperCase();
+  const pratoId=pratoSelect.value;
+  const texto=modoInput.value.trim().toUpperCase();
+  if(!pratoId||!texto) return alert("PREENCHA TUDO");
 
-  await sb
-    .from("buffet")
-    .update({ modo_preparo: texto })
-    .eq("id", pratoAtual.id);
+  await sb.from("buffet")
+    .update({ modo_preparo:texto })
+    .eq("id",pratoId);
 
-  await carregar();
   fechar();
+  carregar();
 }
 
 function fechar(){
   modal.style.display="none";
+  pratoSelect.value="";
+  modoInput.value="";
 }
 
-filtroNome.oninput = render;
-filtroTipo.onchange = render;
-filtroReceita.onchange = render;
+filtroNome.oninput=render;
+filtroTipo.onchange=render;
+filtroReceita.onchange=render;
 
 carregar();
 </script>
